<resources>
    <string name="app_name">Finance Management</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_cost">Not a valid cost</string>
    <string name="invalid_desc">Please insert a short description</string>
    <string name="login_failed">"Login failed"</string>
    <string name="budget_exceeded">BUDGET EXCEEDED</string>
    <string name="confirm">Confirm</string>
    <string name="budget_changes">Budgets changed</string>
    <string name="the_budget_must_be_filled">The budgets must be filled in!</string>
    <string name="cancel">Cancel</string>
    <string name="new_expense">New expense</string>
    <string name="default_notification_channel_id">114</string>
    <string name="update_dialog_title">Update Finance Management</string>
    <string name="update_dialog_message">the current version of this application(%s) is not the last one!, a new version(%s) is available now , update your App to have the best experience</string>
    <string name="update">Update</string>
    <string name="skip_now">Skip now</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="weekly_balance_statement">Weekly Balance Statement</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="what_did_you_pay_for">What did you pay for?</string>
    <string name="how_much_did_you_spend">How much did you spend?</string>
    <string name="category_which_category_does_this_expense_belong_to">Category (Which category does this expense belong to?)</string>
    <string name="description">Description:</string>
    <string name="expenditure">Expenditure:</string>
    <string name="back_add_exp">back_add_exp</string>
    <string name="image_widget">image_widget</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="weekly_budget">Weekly Budget</string>
    <string name="daily_budget">Daily Budget</string>
    <string name="budget">budget</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="add_expense">Add Expense</string>
    <string name="icon_desc_item">icon_desc_item</string>
    <string name="todo">TODO</string>
    <string name="report">Report</string>
    <string name="today">Today:</string>
    <string name="this_month">This month:</string>
    <string name="this_week">This week:</string>
    <string name="show_case_title1">Select Time Range</string>
    <string name="show_case_desc_1">Tap the buttons or swipe the screen to switch between daily, weekly and monthly expense charts.</string>
    <string name="show_case_desc_2">Tap to input a new expense.</string>
    <string name="show_case_desc_3">After adding some expenses, you can tap each element on the chart to view them.</string>
    <string name="show_case_title2">Add an expense</string>
    <string name="show_case_title3">View expenses of each type</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="show_case_title">Set budgets</string>
    <string name="show_case_content">Tap the centre of the chart to set your daily, weekly and monthly budgets.</string>
    <string name="topic_subscribed_msg">user subscribed to %s topic</string>
    <string name="token_is">token is :%s</string>
</resources>
